--- a/Ozon_smoking_detection_Seva_lite_primary_model_epoch5.ipynb
+++ b/Ozon_smoking_detection_Seva_lite_primary_model_epoch5.ipynb
@@ -292,7 +292,7 @@
     "\n",
     "\n",
     "# Создадим папку для увеличенных данных\n",
-    "augmented_data_dir = Path('D:\\\\Книги\\\\Программирование\\\\ML_contests_хакатоны\\\\Ozon_2024\\\\augmented_data')\n",
+    "augmented_data_dir = Path('D:\\\\Книги\\\\Программирование\\\\ML_contests_хакатоны\\\\Ozon_2024\\\\train_lite_augmented')\n",
     "augmented_data_dir.mkdir(exist_ok=True)\n",
     "\n",
     "# Создадим подкатегории для каждого класса\n",
