--- a/Ozon_smoking_detection_Seva_lite_primary_model_epoch5.ipynb
+++ b/Ozon_smoking_detection_Seva_lite_primary_model_epoch5.ipynb
@@ -338,7 +338,7 @@
    "outputs": [],
    "source": [
     "# Обновим список файлов и метки\n",
-    "train_files = list(augmented_data_dir.glob('**/*.jpg'))\n",
+    "train_files = list(train_lite_augmented_dir.glob('**/*.jpg'))\n",
     "train_labels = [path.parent.name for path in train_files]"
    ]
   },
